--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./site-content
+          path: ./site-content/public
 
   # Deployment job
   deploy:
