--- a/site-content/hugo.yaml
+++ b/site-content/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://wateret.github.io/quanta/
 languageCode: en-us
 title: My New Hugo Site
 theme: ["PaperMod"]
