--- a/site-content/hugo.yaml
+++ b/site-content/hugo.yaml
@@ -2,3 +2,7 @@ baseURL: https://wateret.github.io/quanta/
 languageCode: en-us
 title: quanta
 theme: ["PaperMod"]
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
